refactor(loomies): ♻️ Receive the loomie id as a parameter
Use path parameter instead of query parameter.
